fix textarea cutoff

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -136,7 +136,7 @@ h3 {
   resize: none;
   outline: none;
   width: 100%;
-  margin: 30px 0 0 20px;
+  padding: 30px 0 0 20px;
   font-size: 30px;
 }
 
